--- a/AlquitaTuCarro-UI/AlquitaTuCarro-UI.csproj
+++ b/AlquitaTuCarro-UI/AlquitaTuCarro-UI.csproj
@@ -9,4 +9,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AlquitaTuCarro\AlquitaTuCarro.csproj" />
+  </ItemGroup>
+
 </Project>
