--- a/AlquitaTuCarro-UI/AlquitaTuCarro-UI.csproj
+++ b/AlquitaTuCarro-UI/AlquitaTuCarro-UI.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>AlquitaTuCarro_UI</RootNamespace>
+    <RootNamespace>AlquitaTuCarro.UI</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
